# mnemosyne

./: .gitignore  LICENSE  MNEMOSYNE_BIBLE.md  README.md  build-windows.bat  index.html  launch-built.bat  package-lock.json  package.json  run-dev.bat  todo.md  vite.config.ts
docs/: WINDOWS_LAUNCH.md  future-multi-character-settings.md
src/: App.tsx  styles.css  tauri.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/db/: mod.rs
src-tauri/src/providers/: api.rs  mock.rs
src-tauri/state_engine/: Cargo.toml
src-tauri/state_engine/src/: arousal.rs  consolidation.rs  context_compiler.rs  hidden_state.rs  lib.rs  memory.rs  patch.rs  schema.rs  setting.rs  soul.rs
src-tauri/state_engine/tests/: integration_test.rs
