[package]
name = "mnemosyne"
version = "0.1.0"
description = "A local RP client with persistent Soul memory"
authors = ["Mnemosyne contributors"]
license = "AGPL-3.0-or-later"
repository = ""
edition = "2021"

[lib]
name = "mnemosyne_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
state_engine = { path = "./state_engine" }
tauri = { version = "2.0", features = [] }
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.14"
